idea/testData/checker/regression/BadParseForClass.fir.kt
fun main(args: Array<String>) {
    String.<error descr="[EXPRESSION_REQUIRED] ">class</error><EOLError descr="Name expected"></EOLError>
}

// EA-56152: An attempt to build light class in checker to get diagnotics
